# smares-store

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  settings.toml
app/: __init__.py  extensions.py  models.py  routes.py  schemas.py
app/enums/: __init__.py
app/resources/: auth.py  order.py  user.py
app/routes/: __init__.py
app/routes/resources/admin/: __init__.py  auth.py
app/routes/resources/users/: __init__.py  auth.py  order.py  product.py  user.py
app/services/: auth.py  mail.py
app/services/all/: auth.py  response.py
app/services/users/: args.py  parsers.py
app/templates/mails/: forgot-password.html  forgot-password.txt  welcome.html  welcome.txt
migrations/versions/: 6011c5726624_new_updates.py  adeb02c6200b_.py  d5e21a9cee5f_product_update.py  df3711092823_updates.py
